[gd_scene load_steps=2 format=3 uid="uid://dy0vp3asckpdn"]

[ext_resource type="Script" path="res://scenes/HueShiftPopup.gd" id="1_y8q70"]

[node name="Popup" type="Popup" node_paths=PackedStringArray("hueslider", "satslider", "valslider")]
size = Vector2i(200, 150)
visible = true
script = ExtResource("1_y8q70")
hueslider = NodePath("Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HSlider")
satslider = NodePath("Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HSlider")
valslider = NodePath("Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer3/HSlider")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Hue"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
min_value = -0.5
max_value = 0.5
step = 0.01
value = 0.01

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Saturation"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
max_value = 2.0
step = 0.01
value = 1.0

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Value"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[connection signal="value_changed" from="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HSlider" to="." method="update_hue"]
[connection signal="value_changed" from="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HSlider" to="." method="update_sat"]
[connection signal="value_changed" from="Control/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer3/HSlider" to="." method="update_val"]
